# MOFMaster-Scientific-Server

./: .gitignore  README.md  main.py  pyproject.toml  tool_definitions.yaml  tool_registry.py  tools.py
tests/: test_tools.py
tools/: __init__.py  base.py  fetch_structure.py  optimize_geometry.py  parse_structure.py  predict_bandgap.py  static_calculation.py
