[project]
name = "mof-tools"
version = "1.0.0"
description = "Simplified MOF research tools via MCP"
requires-python = ">=3.10"
dependencies = [
    "mcp[server]",
    "ase",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "bohr-agent-sdk",
    "deepmd-kit==3.1.0",
    "torch>=2.1",
    "pymatgen>=2023.0"
]

[project.scripts]
mof-tools = "main:run_server"
